--- a/templates/portfolio/about.html
+++ b/templates/portfolio/about.html
@@ -20,7 +20,7 @@
                     <i class="fas fa-user-circle fa-10x text-primary"></i>
                 </div>
                 <h3 class="fw-bold">Olatunde Emmanuel</h3>
-                <p class="text-muted">Full-Stack Web Developer</p>
+                <p class="text-muted">software Engineer</p>
             </div>
         </div>
         <div class="col-lg-8">
