--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" href="{% static 'images/favicons.png' %}" type="image/x-icon">
     
     {% block extra_css %}{% endblock %}
 </head>
